--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
+  "templateInfo": {
+    "name": "default",
+    "typescript": false,
+    "css": "Sass",
+    "framework": "React"
+  },
   "dependencies": {
     "bootstrap": "4.2.1",
-    "jsnes": "git://github.com/bfirsh/jsnes.git",
+    "jsnes": "git+https://github.com/bfirsh/jsnes.git",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "raven-js": "^3.27.2",
@@ -14,25 +20,87 @@
     "react-ga": "^2.5.7",
     "react-router-dom": "^5.0.0",
     "reactstrap": "^7.1.0",
-    "ringbufferjs": "^1.1.0"
+    "ringbufferjs": "^1.1.0",
+
+    "@babel/runtime": "^7.24.4",
+    "@tarojs/components": "4.0.6",
+    "@tarojs/helper": "4.0.6",
+    "@tarojs/plugin-platform-weapp": "4.0.6",
+    "@tarojs/plugin-platform-alipay": "4.0.6",
+    "@tarojs/plugin-platform-tt": "4.0.6",
+    "@tarojs/plugin-platform-swan": "4.0.6",
+    "@tarojs/plugin-platform-jd": "4.0.6",
+    "@tarojs/plugin-platform-qq": "4.0.6",
+    "@tarojs/plugin-platform-h5": "4.0.6",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.0.6",
+    "@tarojs/runtime": "4.0.6",
+    "@tarojs/shared": "4.0.6",
+    "@tarojs/taro": "4.0.6",
+    "@tarojs/plugin-framework-react": "4.0.6",
+    "@tarojs/react": "4.0.6",
+    "react-dom": "^18.0.0",
+    "react": "^18.0.0"
   },
   "devDependencies": {
-    "canvas": "^2.6.1",
+    "canvas": "^2.11.2",
     "prettier": "^1.16.4",
     "prettier-check": "^2.0.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+
+    "@babel/core": "^7.24.4",
+    "@tarojs/cli": "4.0.6",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@types/webpack-env": "^1.13.6",
+    "@types/react": "^18.0.0",
+    "webpack": "5.91.0",
+    "@tarojs/taro-loader": "4.0.6",
+    "@tarojs/webpack5-runner": "4.0.6",
+    "sass": "^1.75.0",
+    "babel-preset-taro": "4.0.6",
+    "eslint-config-taro": "4.0.6",
+    "eslint": "^8.57.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "react-refresh": "^0.14.0",
+    "@babel/preset-react": "^7.24.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "stylelint": "^16.4.0",
+    "postcss": "^8.4.38",
+    "@types/node": "^18"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "prettier-check src/**/*.js && react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js",
+    
+    "build:weapp": "taro build --type weapp",
+    "build:swan": "taro build --type swan",
+    "build:alipay": "taro build --type alipay",
+    "build:tt": "taro build --type tt",
+    "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
+    "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
+    "build:harmony-hybrid": "taro build --type harmony-hybrid",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:swan": "npm run build:swan -- --watch",
+    "dev:alipay": "npm run build:alipay -- --watch",
+    "dev:tt": "npm run build:tt -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch",
+    "dev:qq": "npm run build:qq -- --watch",
+    "dev:jd": "npm run build:jd -- --watch",
+    "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
-    "not op_mini all"
+    "not op_mini all",
+    
+    "defaults and fully supports es6-module",
+    "maintained node versions"
   ]
 }
